maybe fix stats wrapping

--- a/pointercrate-core-pages/static/css/ui.css
+++ b/pointercrate-core-pages/static/css/ui.css
@@ -458,6 +458,7 @@ textarea:invalid {
 .stats-container {
   margin: 5px 0%;
   flex-wrap: wrap;
+  overflow-wrap: anywhere;
 }
 
 .stats-container > * {
